--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application' %>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script> <!-- For Drag & Drop List -->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For Drag & Drop List -->
   </head>
-
   <body>
     <%= yield %>
   </body>
