--- a/app/assets/stylesheets/components/_lists.scss
+++ b/app/assets/stylesheets/components/_lists.scss
@@ -1,45 +1,55 @@
 .unstyled-list{
-list-style-type:none;
-display:flex;
-width:60%;
-margin:0px;
-padding:0px;
-height:30px;
+  list-style-type:none;
+  display:flex;
+  width:100%;
+  max-width:650px;
+  margin:0px;
+  padding:0px;
+  height:30px;
 
   border: 0.5px solid #ddd;
   border-top:none;
   border-collapse: collapse;
-border-spacing: 0px;
+  border-spacing: 0px;
 }
 
 li{
-flex:1 1 auto;
+  flex:1 1 auto;
   display:inline;
   margin:0px;
   border-right: 1px solid #ddd;
   border-collapse: collapse;
-border-spacing: 0;
+  border-spacing: 0;
 }
 
 .unstyled-list:first-of-type{
   border-top:1px solid #ddd;
   border-bottom:1px solid #ddd;
 }
+
 .unstyled-list li:nth-child(1){
-  width:20%;
+  width:15%;
 }
 
 .unstyled-list li:nth-child(2){
-  width:45%;
-
+  width:55%;
+  padding-left:10px;
+  padding-right:10px;
 }
 
 .unstyled-list li:nth-child(3){
-  width:20%;
-
+  width:15%;
 }
 
 .unstyled-list li:nth-child(4){
   width:15%;
-
 }
+
+#todolist-body .unstyled-list li:nth-of-type(2){
+  cursor:grab;
+}
+
+#todolist-body .unstyled-list:nth-of-type(2n){
+  background-color:#F9F9F9;
+}
+
