--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,9 +1,9 @@
 
-<ul data-task-id="<%= task.id %>" class="unstyled-list">
-  <li class="text-center" data-task-id="<%= task.id %>"><%# index + 1 %></li>
-  <li data-task-id="<%= task.id %>"><%= task.title %></li>
-  <li class="text-center" data-task-id="<%= task.id %>"><%= task.time.to_s + " h"%></li>
-  <li class="text-center" data-task-id="<%= task.id %>">
+<ul data-task-id="<%= task.id %>" data-task-order="<%= task.order %>" class="unstyled-list">
+  <li class="text-center"><%= task.order %></li>
+  <li><%= task.title %></li>
+  <li class="text-center"><%= task.time.to_s + " h"%></li>
+  <li class="text-center">
     <%= link_to task, method: :delete, remote: true do %>
       <i class="fa fa-times" aria-hidden="true"></i>
     <% end %>
