--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -34,5 +34,7 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 
-
+// my variables
 $li-height: 40px;
+$blue-color: #4C9ED9;
+$red-color: #E70944;
