--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Welcome to new TO DO LIST App</h1>
 
-<p><%= link_to "Add", "#", remote: true, id:"add-task-link"%>&nbsp;<a href="">l</a>&nbsp;<%= link_to "Change", "", remote: true, id:"change-order-link"%></p>
+<p>
+  <%= link_to "Add", "#", remote: true, id:"add-task-link"%>
+  <a href="">l</a>
+  <%= link_to "Reset", reset_list_tasks_path, method: :delete, remote: true, id:"delete-all-link"%>
+</p>
 
 <%= render partial: 'shared/form_new' %>
 
@@ -11,13 +15,11 @@
     <li class="text-center"><strong>Time</strong></li>
     <li class="text-center"><strong>Del.</strong></li>
   </ul>
-<div id="todolist-body">
-  <% @tasks.order(:order).each do |task| %>
-    <%= render partial: 'task', locals: {task: task} %>
-  <% end %>
-
-</div>
-
+  <div id="todolist-body">
+    <% @tasks.order(:order).each do |task| %>
+     <%= render partial: 'task', locals: {task: task} %>
+    <% end %>
+  </div>
   <ul id="todolist-total" class="unstyled-list">
     <li></li>
     <li style="text-align: right"> Total :</li>
@@ -30,7 +32,7 @@
 <br/>
 <br/>
 
-<div>
+<div id="agenda">
   <ul class="agenda-fond">
     <li class="agenda-titre">
       <div id="add-task-button">
@@ -43,7 +45,6 @@
     <li id="hour-<%=i+8%>" class="snoppy <%='lunch' if [5, 12].include? i %>" data-timer="<%=i%>">
       <div class="timer"><%= i + 8 %>h</div>
       <div class="buttin">
-      <%= puts @tasks.where(timer: i) %>
         <%= render partial: 'taskbox', locals:{ task: @tasks.where(timer: i).first } unless @tasks.where(timer: i).empty? %>
       </div>
       <div class="timer"></div>
