--- a/app/assets/stylesheets/components/_agenda.scss
+++ b/app/assets/stylesheets/components/_agenda.scss
@@ -63,7 +63,7 @@ ul.agenda-fond{
 
 
 .task{
-  background-color:#4C9ED9;
+  background-color:$blue-color;
   color:white;
   border-radius:5px;
   padding: 1px 5px;
@@ -72,6 +72,10 @@ ul.agenda-fond{
   cursor:default;
   display:inline-block;
   padding-right:30px;
+}
+
+.red{
+  background-color:$red-color;
 }
 
 @for $i from 1 through 8 {
