--- a/app/views/tasks/_taskbox.html.erb
+++ b/app/views/tasks/_taskbox.html.erb
@@ -1,3 +1,3 @@
-<div id="box-<%= task.id %>" class="task hour<%= task.time %>">
+<div id="box-<%= task.id %>" class="task hour<%= task.time %>" data-time="<%= task.time %>">
   <%= task.title %>
 </div>
