--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -49,8 +49,10 @@
   </ul>
 </div>
 
+<hr>
+
 <h3>Issues</h3>
   <ul>
-    <li>Drag & Drop : </li>
+    <li><strong>Drag & Drop :</strong> probléme avec les blue box supérieures à 1h. Quand on déplace celles-ci, elles sautent plusieurs lignes au moment du drop. Solution : "tolerance" du drag & drop. Voir : <a>http://api.jqueryui.com/droppable/#option-tolerance</a></li>
   </ul>
 
