--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -4,7 +4,7 @@ $("<%= j render partial: 'task', locals: {task: @task, index: 0} %>").hide().app
 // Blue Box in Timer List
 var time = parseInt($('.task:last').attr('data-time'));
 var last_timer = parseInt($('.task:last').parents('.snoppy').attr('data-timer'));
-var next = (last_timer + time + 8) || 9;
+var next = (last_timer + time + 8) || 9; //timer starts at 0 but day start at 9
 $("<%= j render partial: 'taskbox', locals: { task: @task } %>").hide().appendTo("#hour-" + next + " > div.buttin").fadeIn(1400).draggable({
     cursor: "move",
     containment : '.agenda-fond',
@@ -12,7 +12,6 @@ $("<%= j render partial: 'taskbox', locals: { task: @task } %>").hide().appendTo
     revert: 'invalid',
     }
 );
-
 
 emptyForm('#task_title');
 emptyForm('#task_time');
