--- a/app/views/tasks/reset_list.js.erb
+++ b/app/views/tasks/reset_list.js.erb
@@ -2,6 +2,6 @@
 
 $("ul[data-task-id]").slideUp(1000, function() {
   $(this).remove();
-  $('#total-list').text('0 h');
+  $('#total-list').text('[0 h]');
 });
 $('[id^="box"]').fadeOut(600, function() { $(this).remove() });
