--- a/app/assets/stylesheets/components/_agenda.scss
+++ b/app/assets/stylesheets/components/_agenda.scss
@@ -1,4 +1,4 @@
-// variables
+// Agenda Background
 
 .lunch{
   background-color:#F9F9F9;
@@ -7,9 +7,10 @@
 ul.agenda-fond{
   width:435px;
   margin:0px;
-  margin-top:40px;
+  margin-bottom:30px;
   padding:2px;
   border-collapse:collapse;
+  background-color:white;
 
   li.agenda-titre{
       background-color:#F9F9F9;
@@ -62,9 +63,10 @@ ul.agenda-fond{
 
 }
 
+// Task Box
 
 .task{
-  background-color:$blue-color;
+  background-color:lighten($blue-color,0.5);
   color:white;
   border-radius:5px;
   padding: 1px 5px;
