--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -36,5 +36,10 @@ $gray: #000000;
 
 // my variables
 $li-height: 40px;
-$blue-color: #4C9ED9;
+$blue-color: lighten(#4C9ED9, 7%);
 $red-color: #E70944;
+$gray-back: #F9F9F9;
+$gray-section-back:#FBFBFB;
+$gray-border: #D9D9D9;
+$gray-title: #A5A5A5;
+$section-w:12vw;
