--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,12 +3,48 @@
  * (margin/padding adjustments)
  * ------------------------------------- */
 
+
 body{
-  width:70%;
+  width:100%;
   margin:auto;
   font-size:2em;
+  color:$gray-title;
 }
 
+main{
+  margin:0;
+  display:flex;
+  min-height:95vh;
 
+  section{
+    padding-top:15px;
+  }
 
+  section:nth-of-type(1){
+    width:$section-w;
+    border-right:1px solid $gray-border;
 
+  }
+
+  section:nth-of-type(2){
+    width:(100vw - $section-w)/2 + 5vw;
+    padding:50px 0px 10px 20px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    background-color:$gray-section-back;
+
+      h2{
+        color:gray;
+        font-size:2.6em;
+        font-weight:500;
+      }
+  }
+
+  section:nth-of-type(3){
+    width:(100vw - $section-w)/2 - 5vw;
+    padding-left:40px;
+    padding-top:60px;
+    background-color:$gray-section-back;
+  }
+}
