--- a/app/views/tasks/destroy.js.erb
+++ b/app/views/tasks/destroy.js.erb
@@ -6,11 +6,11 @@ $("ul[data-task-id=<%= @task.id %>]").slideUp(400, function() { $(this).remove()
 $("#box-<%= @task.id %>").fadeOut(600, function() { $(this).remove() });
 // Re-calculate total of to do list
 function total(){
-  var total = parseInt($('#total-list').text().split(' ')[0]);
+  var total = parseInt($('#total-list').text().split('')[1]);
   var task_time = <%= @task.time %>;
   var new_total = total - task_time;
 
-  $('#total-list').text(String(new_total) + " h");
+  $('#total-list').text("[" + String(new_total) + " h]");
 };
 
 // Re-index the Order column
