--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -37,7 +37,7 @@ $gray: #000000;
 // my variables
 $li-height: 40px;
 $blue-color: lighten(#4C9ED9, 7%);
-$red-color: #E70944;
+$red-color: lighten(#E70944, 10%);
 $gray-back: #F9F9F9;
 $gray-section-back:#FBFBFB;
 $gray-border: #D9D9D9;
