--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,16 +9,16 @@ body{
   margin:auto;
   font-size:2em;
   color:$gray-title;
+  height:100vh;
+  box-sizing:border-box;
+  display:flex;
+  flex-direction:column;
 }
 
 main{
   margin:0;
+  flex:1 1 auto; // to allow 100% vh page
   display:flex;
-  min-height:95vh;
-
-  section{
-    padding-top:15px;
-  }
 
   section:nth-of-type(1){
     width:$section-w;
@@ -28,13 +28,14 @@ main{
 
   section:nth-of-type(2){
     width:(100vw - $section-w)/2 + 5vw;
-    padding:50px 0px 10px 20px;
+    padding:90px 0px 10px 20px;
     display:flex;
     flex-direction:column;
     align-items:center;
     background-color:$gray-section-back;
 
       h2{
+      margin-top:0px;
         color:gray;
         font-size:2.6em;
         font-weight:500;
@@ -44,7 +45,13 @@ main{
   section:nth-of-type(3){
     width:(100vw - $section-w)/2 - 5vw;
     padding-left:40px;
-    padding-top:60px;
+    padding-top:70px;
     background-color:$gray-section-back;
+
+
+      .no-link{
+        color:inherit;
+        text-decoration:none;
+      }
   }
 }
