--- a/app/views/tasks/reset_list.js.erb
+++ b/app/views/tasks/reset_list.js.erb
@@ -3,5 +3,9 @@
 $("ul[data-task-id]").slideUp(1000, function() {
   $(this).remove();
   $('#total-list').text('[0 h]');
+  $('#total-list').data('time', '0');
 });
-$('[id^="box"]').fadeOut(600, function() { $(this).remove() });
+
+$('[id^="box"]').fadeOut(600, function() {
+  $(this).remove()
+});
